--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -4,6 +4,30 @@ body{
     font-family: $primaryFont;
     font-size: 16px;
     font-weight: 400;
+    &::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+    &::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 4px #D9D9D9;
+    }
+    &::-webkit-scrollbar-thumb {
+    background-color: #91ADBB;
+    outline: 1px solid #D9D9D9;
+    }
+}
+*{
+    ::-webkit-scrollbar {
+        width: 4px;
+        height: 4px;
+    }
+    ::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 4px #D9D9D9;
+    }
+    ::-webkit-scrollbar-thumb {
+    background-color: #91ADBB;
+    outline: 1px solid #D9D9D9;
+    }
 }
 a{
     text-decoration: none;
@@ -34,6 +58,8 @@ a{
     border-radius: 20px 20px 0 0;
 }
 .table{
+    table-layout: auto;
+    width: 100%;
     tr{
         &:last-child{
             td{
@@ -47,13 +73,67 @@ a{
         font-weight: 500;
         color: $primaryColor;
         padding: 32px 18px;
+        vertical-align: middle;
+        @media ($sm-1679){
+            padding: 20px 18px;
+            font-size: 15px;
+        }
+        @media ($sm-1199){
+            padding: 17px 14px;
+            font-size: 14px;
+        }
+        @media ($sm-991){
+            padding: 15px 10px;
+        }
         &:first-child{
             border-top-left-radius: 20px;
             padding-left: 36px;
+            @media ($sm-1679){
+                padding-left: 30px;
+            }
+            @media ($sm-1441){
+                padding-left: 25px;
+            }
+            @media ($sm-1199){
+                padding-left: 20px;
+            }
+            @media ($sm-991){
+                padding-left: 15px;
+            }
         }
         &:last-child{
             border-top-right-radius: 20px;
             padding-right: 36px;
+            @media ($sm-1679){
+                padding-right: 30px;
+            }
+            @media ($sm-1441){
+                padding-right: 25px;
+            }
+            @media ($sm-1199){
+                padding-right: 20px;
+            }
+            @media ($sm-991){
+                padding-right: 15px;
+            }
+        }
+        &.th-date{
+            min-width: 165px;
+        }
+        &.th-tag{
+            min-width: 160px;
+        }
+        &.th-agency{
+            min-width: 100px;
+        }
+        &.th-id{
+            min-width: 110px;
+        }
+        &.th-time{
+            min-width: 115px;
+        }
+        &.th-amount{
+            min-width: 120px;
         }
     }
     td{
@@ -61,11 +141,41 @@ a{
         font-size: 16px;
         padding: 32px 18px;
         border-bottom: 1px solid #4B164C1A;
+        white-space: nowrap;
+        @media ($sm-1679){
+            padding: 20px 18px;
+            font-size: 15px;
+        }
+        @media ($sm-1199){
+            padding: 17px 14px;
+            font-size: 14px;
+        }
+        @media ($sm-991){
+            padding: 15px 10px;
+        }
         &:first-child{
             padding-left: 36px;
+            @media ($sm-1679){
+                padding-left: 30px;
+            }
+            @media ($sm-1441){
+                padding-left: 25px;
+            }
+            @media ($sm-1199){
+                padding-left: 20px;
+            }
         }
         &:last-child{
             padding-right: 36px;
+            @media ($sm-1679){
+                padding-right: 30px;
+            }
+            @media ($sm-1441){
+                padding-right: 25px;
+            }
+            @media ($sm-1199){
+                padding-right: 20px;
+            }
         }
     }
 }
