--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -6,6 +6,7 @@
     text-align: center;
     align-items: center;
     justify-content: center;
+    margin-top: auto;
     @media ($sm-1679){
         font-size: 15px;
     }
@@ -13,7 +14,7 @@
         font-size: 14px;
     }
     @media (max-width:650px){
-        margin-top: 20px;
+        // margin-top: 20px;
     }
     .copy{
         margin-bottom: 0;
@@ -25,7 +26,7 @@
         .ftr{
             padding-bottom: 25px;
             @media ($sm-579){
-                margin-top: 10px;
+                margin-top: auto;
             }
         }
     }
