--- a/src/assets/scss/profile.scss
+++ b/src/assets/scss/profile.scss
@@ -2,12 +2,20 @@
 .profile-sec{
     max-width: 1119px;
     margin: auto;
+    padding-bottom: 30px;
+    @media($sm-1679){
+        max-width: 900px;
+        width: 100%;
+    }
+    @media($sm-991){
+        width: 90%;
+    }
     .profile-title{
         display: flex;
         font-weight: 500;
         font-size: 18px;
+        align-items: center;
         padding: 30px 0px;
-
         .pro-pic{
             width: 47px;
             height: 47px;
@@ -31,7 +39,7 @@
         border-radius: 50px;
 
         .profile-picture{
-            background-image: url(../images/profile-picture-bg.png);
+            background-image: url(../img/profile-picture-bg.png);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
@@ -43,10 +51,21 @@
             flex-direction: column;
             margin: 20px 20px 0px 20px;
             position: relative;
+            @media ($sm-1679){
+                min-height: 220px;
+                margin: 15px 15px 0px 15px;
+            }
+            @media ($sm-1441){
+                min-height: 200px;
+            }
+            @media ($sm-991){
+                margin: 10px 10px 0px 10px;
+                border-radius: 40px;
+            }
             &::after{
                 position: absolute;
                 content: "";
-                background-image: url(../images/profile-botm-img.png);
+                background-image: url('../img/profile-botm-img.png');
                 width: 235px;
                 height: 130px;
                 background-repeat: no-repeat;
@@ -64,6 +83,23 @@
                 @media($sm-1481){
                     width: 90px;
                     height: 90px;
+                }
+                @media($sm-1199){
+                    width: 80px;
+                    height: 80px;
+                }
+                @media($sm-991){
+                    width: 70px;
+                    height: 70px;
+                }
+                @media($sm-579){
+                    width: 60px;
+                    height: 60px;
+                }
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
                 }
             }
 
@@ -91,6 +127,9 @@
 
         .profile-tab {
             padding: 30px 0px 30px 0px;
+            @media ($sm-991){
+                padding-bottom: 0px;
+            }
             .profile-tab-inner {
                 margin-top: -60px;
           
@@ -106,10 +145,10 @@
                 //     padding: 0 20px;
                 // }
                 @media ($sm-767) {
-                    margin-top: -88px;
+                    margin-top: -79px;
                 }
                 .tab-content {
-                    background-color: $white;
+                    background-color: transparent;
                     margin-top: -1px;
                     border-bottom-right-radius: 30px;
                     border-bottom-left-radius: 30px;
@@ -123,8 +162,26 @@
                     border-top-right-radius: 30px;
                     position: relative;
                     z-index: 999;
+                    @media ($sm-1679){
+                        margin: 0px 60px;
+                    }
+                    @media ($sm-1441){
+                        margin: 0px 50px;
+                    }
+                    @media ($sm-1199){
+                        margin: 0px 40px;
+                        border-top-left-radius: 20px;
+                    border-top-right-radius: 20px;
+                    }
+                    @media ($sm-991){
+                        margin: 0px 30px;
+                        border-top-left-radius: 15px;
+                    border-top-right-radius: 15px;
+                    }
+                    @media ($sm-767){
+                        margin: 0px 20px;
+                    }
                     @media ($sm-767) {
-                        width: 100%;
                         flex-wrap: nowrap;
                         white-space: nowrap;
                         overflow: hidden;
@@ -142,12 +199,24 @@
                     &:first-child {
                         .nav-link {
                             border-top-left-radius: 30px;
+                            @media ($sm-1199){
+                                border-top-left-radius: 20px;
+                            }
+                            @media ($sm-991){
+                                border-top-left-radius: 15px;
+                            }
                        
                         }
                     }
                     &:last-child {
                         .nav-link {
                             border-top-right-radius: 30px;
+                            @media ($sm-1199){
+                                border-top-right-radius: 20px;
+                            }
+                            @media ($sm-991){
+                                border-top-right-radius: 15px;
+                            }
                         }
                     }
                 }
@@ -165,7 +234,12 @@
                         font-size: 14px;
                     }
                     @media ($sm-1199) {
-                        font-size: 12px;
+                        font-size: 13px;
+                        padding: 15px 20px;
+                    }
+                    @media ($sm-991) {
+                        font-size: 13px;
+                        padding: 15px;
                     }
                     span {
                         margin-right: 13px;
@@ -184,11 +258,24 @@
                             }
                         }
                     }
+                    .txt{
+                        @media (max-width:600px){
+                            display: none;
+                        }
+                    }
                     &.active {
                         background-color: #fff;
                         color: $primaryBgColor;
                         border-top-left-radius: 30px;
                         border-top-right-radius: 30px;
+                        @media ($sm-1199){
+                            border-top-left-radius: 20px;
+                            border-top-right-radius: 20px;
+                        }
+                        @media ($sm-991){
+                            border-top-left-radius: 15px;
+                            border-top-right-radius: 15px;
+                        }
                     }
                    
                 }
@@ -203,6 +290,9 @@
                     margin: auto;
                     display: flex;
                     flex-wrap: wrap;
+                    @media ($sm-991){
+                        width: 95%;
+                    }
         
                     .boxes {
                         padding: 35px 38px;
@@ -286,12 +376,24 @@
                     }
                 }
                 .input-grp{
-                    padding-bottom: 35px;
+                    padding-bottom: 15px;
+                    @media ($sm-1679){
+                        padding-bottom: 10px;
+                    }
+                    @media ($sm-991){
+                        padding-bottom: 0;
+                    }
                     &:last-child{
                         padding-bottom: 0px;
                     }
+                    &.mb-3{
+                        @media ($sm-991){
+                            margin-bottom: 0 !important;
+                        }
+                    }
                     .input-wrp{
                         position: relative;
+                        margin-bottom: 20px;
                         .error{
                             color: red;
                             font-size: 14px;
@@ -313,11 +415,11 @@
                         color: #8897AD; 
                     }
                     @media ($sm-1679) {
-                        height: 46px;
+                        height: 44px;
                         font-size: 16px;
                     }
                     @media ($sm-991) {
-                        height: 45px;
+                        height: 40px;
                     }
                 
                 }
@@ -328,9 +430,24 @@
                 justify-content: center;
                 align-items: center;
                 padding: 30px 200px 0px 200px;
-                @media ($sm-479) {
+                @media($sm-1679){
+                    padding: 30px 180px;
+                }
+                @media($sm-1481){
+                    padding: 25px 160px;
+                }
+                @media ($sm-1199) {
+                    padding: 30px 100px;
+                }
+                @media ($sm-991) {
+                    padding: 20px;
+                    border-bottom-left-radius: 30px;
+                    border-bottom-right-radius: 30px;
+                }
+                @media ($sm-579) {
                     padding: 15px 10px;
                     gap: 10px;
+                    flex-wrap: wrap;
                 }
                 .btn {
                     width: 50%;
@@ -349,12 +466,13 @@
                         height: 48px;
                     }
                     @media ($sm-767) {
-                        width: auto;
+                      
                         height: 45px;
                         font-size: 12px;
                     }
-                    @media ($sm-479) {
+                    @media ($sm-579) {
                         margin-right: 0;
+                        width: 100%;
                     }
                     .img {
                         margin-right: 9px;
